chore(demo): add contributor, fix code block overflow

--- a/projects/elements-demo/src/styles-reset.scss
+++ b/projects/elements-demo/src/styles-reset.scss
@@ -26,6 +26,7 @@ pre {
   border-radius: 10px;
   padding: 20px !important;
   margin: 0 0 20px 0;
+  overflow: hidden;
 }
 
 p {
